# opengldemo

./: CMakeLists.txt  TODO.md
include/: asset_manager.hpp  program.hpp  program_pipeline.hpp  shader.hpp  util.hpp
shaders/: test.frag  test.vert
src/: asset_manager.cpp  main.cpp  program.cpp  program_pipeline.cpp  shader.cpp  util.cpp
